adds openapi docs for POST methods, and starts getting store methods created
